Fri Aug 16 18:24:35 1991  Linus Tolke Y  (linus at lysator)

	* commands1.el (lyskom-return-username): Nu kan den {ven matcha
	  maskinnamn som har andra tecken {n bokst{ver i sig.

	* vars.el (lyskom-elisp-variables): Lagt till lyskom-prompt-text
	  och lyskom-prompt-executing-default-command-text till listan av
	  variabler som sparas f|r denna klient.

	* swedish-strings.el, commands2.el (kom-compile-bug-report): Lite
	  sk|nhets{ndringar. Nu skall Backtracen hanteras snyggare.

	* swedish-strings.el (lyskom-strings): buggreport-subject hade en
	  %s f|r mycket.

Wed Aug 14 02:46:40 1991  Linus Tolke Y  (linus at lysator)

	* lyskom-rest.el (lyskom-end-of-command,
	  lyskom-insert-before-prompt): nu sl{nger den inte om lagrade
	  meddelanden i omv{nd ordning. Vi anv{nder nu lyskom-queue.

Tue Aug 13 03:05:27 1991  Linus Tolke Y  (linus at lysator)

	* swedish-string.el, review.el (kom-review-stack): Fixat en
	  kvargl|md text.

	* commands1.el: lyskom-sub-member-answer, nu r{knar den bara ner
	  lyskom-last-conf-received om man subtraherar sig sj{lv.

	* edit-text.el: lyskom-edit-get-commented s|ker nu f|rst efter
	  kommenterade och sedan fotnoterade inl{gg.

Wed Jul 31 06:59:14 1991  Linus Tolke Y  (linus at lysator)

	* commands2.el: lyskom-list-summary. R{knar nu r{tt p} vilken
	  m}nad det {r.

Fri Jul 19 12:39:19 1991  Inge Wallin  (inge at lysator)

	* swedish-strings.el: Tagit bort bindningen till 'u' f|r kommandot
	  Uttr{da eftersom det inte {r ett kommando som man vill trycka av
	  misstag. 

Fri Jul 19 12:30:17 1991  Linus Tolke Y  (linus at lysator)

	* edit-text.el: gurksallad-k|n bytt till edit-2.

Tue Jul  9 01:04:59 1991  Inge Wallin  (inge at lysator)

	* commands2.el: kom-force-logout: Nytt kommando "Kasta ut en
	  session".

	* commands2.el: lyskom-set-motd: Nu blir det ingen newline extra
	  n{r man editerar ett gammalt loginmeddelande.

	* startup.el: lyskom-store-server-info: Ny hantering av